text and about me about

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <header class="masthead">
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
-                    <h1 class="mx-auto my-0 text-uppercase">Current<br>Conscise<br>Elegant</h1>
+                    <h1 class="mx-auto my-0 text-uppercase">Ted Peters<br><h3>Project Developer</h3>
                     <h2 class="text-white-50 mx-auto mt-2 mb-5">Lets work together to build something amazing</h2>
                     </h2>
                     <a class="btn btn-primary js-scroll-trigger" href="#about">Take A Look</h8><h5><i class="far fa-arrow-alt-circle-down"></i></h5></a>
@@ -49,9 +49,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
-                        <h1 class="text-white mb-4">Who is he?</h1>
+                        <h1 class="text-white mb-4">Who I am.</h1>
                         <p class="text-white-50">
-                            I'm a developer who has a serious passion for Full Stack Developement<br> I am devoted and enthusuastic to work with clients, and always eager to take there vision and creatively fit it to their very own intuitive UI. Matching thier image ith seemless server structure to make sure it can handle even the toughest requests.<br>
+                            I am developer with an open mind and keen eye for creating intuitive designs to heighten user experiences. <br>Clients can expect a seemless server structure to complement their elegant UI. <br>Giving their customers an unforgettablly pleasing glitch free experience.<br>
                            <br><a href="https://github.com/Drop-G?tab=repositories">GitHub</a><br>
                             <br> HTML, CSS, Javascript, Python, mySQL, Photoshop, Illustrator<br>
                         </p>
