About me update

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <h1 class="mx-auto my-0 text-uppercase">Ted Peters<br><h3>Project Developer</h3>
                     <h2 class="text-white-50 mx-auto mt-2 mb-5">Lets work together to build something amazing</h2>
                     </h2>
-                    <a class="btn btn-primary js-scroll-trigger" href="#about">Take A Look</h8><h5><i class="far fa-arrow-alt-circle-down"></i></h5></a>
+                    <a class="btn btn-primary js-scroll-trigger" href="#about">Take A Look</h8><h5><br><i class="far fa-arrow-alt-circle-down fa-2x"></i></h5></a>
                 </div>
             </div>
         </header>
@@ -51,7 +51,7 @@
                     <div class="col-lg-8 mx-auto">
                         <h1 class="text-white mb-4">Who I am.</h1>
                         <p class="text-white-50">
-                            I am developer with an open mind and keen eye for creating intuitive designs to heighten user experiences. <br>Clients can expect a seemless server structure to complement their elegant UI. <br>Giving their customers an unforgettablly pleasing glitch free experience.<br>
+                            I am developer with an open mind and keen eye for creating intuitive, reponsive designs. <br>Clients can expect a seemless server structure to complement their elegant UI<br>giving their customers an unforgettablly pleasing glitch free experience.<br>
                            <br><a href="https://github.com/Drop-G?tab=repositories">GitHub</a><br>
                             <br> HTML, CSS, Javascript, Python, mySQL, Photoshop, Illustrator<br>
                         </p>
