updated color photos and a few gramatical errors

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="col-lg-8 mx-auto">
                         <h1 class="text-white mb-4">Who I am.</h1>
                         <p class="text-white-50">
-                            I am developer with an open mind and keen eye for creating intuitive, reponsive designs. <br>Clients can expect a seemless server structure to complement their elegant UI<br>giving their customers an unforgettablly pleasing glitch free experience.<br>
+                            I am developer with an open mind and keen eye for creating intuitive, reponsive designs. <br>Clients can expect a seemless server structure to complement their elegant UI<br>giving their customers an unforgettably pleasing glitch free experience.<br>
                            <br><a href="https://github.com/Drop-G?tab=repositories">GitHub</a><br>
                             <br> HTML, CSS, Javascript, Python, mySQL, Photoshop, Illustrator<br>
                         </p>
@@ -65,7 +65,7 @@
             <div class="container">
                 <!-- Featured Project Row-->
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/GMOH.png" alt="Get out of here image" /></div>
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/GOHCOLOR.png" alt="Get out of here image" /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4>GO'H</h4>
@@ -75,13 +75,13 @@
                 </div>
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/GMOH.png" alt="Get of Here Image" /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/weatherdash.png" alt="Get of Here Image" /></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Password Generator</h4>
-                                    <p class="mb-0 text-white-50">A simple app to generate a random password powered by Javascript</p>
+                                    <h4 class="text-white">Weath Dashboard</h4>
+                                    <p class="mb-0 text-white-50">This application searches the current weather and the 5 day forecast for a specific city by using the openweathermap.com API</p>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
                                 </div>
                             </div>
@@ -90,7 +90,7 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row justify-content-center no-gutters">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/refactored.png" alt="refactored html project" /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/Horiseon.png" alt="refactored html project" /></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
