added .gitignore fixed weather typo

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Weath Dashboard</h4>
+                                    <h4 class="text-white">Weather Dashboard</h4>
                                     <p class="mb-0 text-white-50">This application searches the current weather and the 5 day forecast for a specific city by using the openweathermap.com API</p>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
                                 </div>
