added 3 projects with images to the html

--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
             <div class="container">
                 <!-- Featured Project Row-->
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/merximage.png" alt="Get out of here image" /></div>
+                    <div class="col-xl-4 col-lg-5">
+                        <div class="featured-text text-center text-lg-left">
+                            <h4>MERX</h4>
+                            <p class="text-black-50 mb-0">As a competitive gamer I want to time myself from the start of a specific game to the end so that I will be able to compare my splits to review overall improvement. I want to see these splits displayed among other high scores from professional speed runs so that I can compare my progress to professional high scores.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row align-items-center no-gutters mb-4 mb-lg-5">
                     <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/GOHCOLOR.png" alt="Get out of here image" /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
@@ -99,6 +108,51 @@
                                     <h4 class="text-white">Refactored</h4>
                                     <p class="mb-0 text-white-50">The importance of semantic elements in the developement world is very cruical to minimal to no legal conflict. Just the thought of legality is unnerving. Search through this sites html and find nothing but semantic elements and clean code</p>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- project three row -->
+                <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/employee_db.png" alt="Employee Manager CLI" /></div>
+                    <div class="col-lg-6">
+                        <div class="bg-black text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 my-auto text-center text-lg-left">
+                                    <h4 class="text-white">Employee Management System</h4>
+                                    <p class="mb-0 text-white-50">This application allows managers to add company information to a MySQL database using a node.js Command Line Interface.</p>
+                                    <hr class="d-none d-lg-block mb-0 ml-0" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- project four row -->
+                <div class="row justify-content-center no-gutters">
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/notetakerimg.png" alt="Note Taker Image" /></div>
+                    <div class="col-lg-6 order-lg-first">
+                        <div class="bg-black text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 my-auto text-center text-lg-right">
+                                    <h4 class="text-white">Note Taker</h4>
+                                    <p class="mb-0 text-white-50">This is an easy to use app that saves whatever you need to remember for later</p>
+                                    <hr class="d-none d-lg-block mb-0 mr-0" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- project five row -->
+                <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/passwordgenIMG.png" alt="password generator image" /></div>
+                    <div class="col-lg-6">
+                        <div class="bg-black text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 my-auto text-center text-lg-left">
+                                    <h4 class="text-white">Password Generator</h4>
+                                    <p class="mb-0 text-white-50">Password Generator Renders a 12 digit password for you.</p>
+                                    <hr class="d-none d-lg-block mb-0 ml-0" />
                                 </div>
                             </div>
                         </div>
