--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <header class="masthead">
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
-                    <h1 class="mx-auto my-0 text-uppercase">Ted Peters<br><h3>Project Developer</h3>
-                    <h2 class="text-white-50 mx-auto mt-2 mb-5">Lets work together to build something amazing</h2>
+                    <h1 class="mx-auto my-0 text-uppercase">Ted Peters<br><h3>J</h3>
+                    <h2 class="text-white-50 mx-auto mt-2 mb-5"></h2>
                     <br>
                     <br>
                     <a class="btn btn-primary js-scroll-trigger" href="#about">Take A Look</h8><h5><br><i class="far fa-arrow-alt-circle-down fa-3x"></i></h5></a>
@@ -52,9 +52,7 @@
                     <div class="col-lg-8 mx-auto">
                         <h1 class="text-white mb-4">Who I am.</h1>
                         <p class="text-white-50">
-                            I am developer with an open mind and keen eye for creating intuitive, reponsive designs. <br>Clients can expect a seemless server structure to complement their elegant UI<br>giving their customers an unforgettably pleasing glitch free experience.<br>
                            <br><a href="https://github.com/Drop-G?tab=repositories">GitHub</a><br>
-                            <br> HTML, CSS, Javascript, Python, mySQL, Photoshop, Illustrator<br>
                         </p>
                         <img class="img-fluid" src="assets/img/BlackSmoke1280x1275.png" alt="laptop image" />
                     </div>
@@ -195,7 +193,7 @@
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50"><a href="#!">tedpetersiv@gmail.com</a></div>
+                                <div class="small text-black-50"><a href="#!"></a></div>
                             </div>
                         </div>
                     </div>
@@ -205,7 +203,7 @@
                                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Phone</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50">(203)804-6563</div>
+                                <div class="small text-black-50"></div>
                             </div>
                         </div>
                     </div>
