--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Responsive Bootstrap Portfolio" />
         <meta name="author" content="Ted Peters" />
         <title>Ted Peters</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico"/>
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -37,11 +37,11 @@
         <header class="masthead">
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
-                    <h1 class="mx-auto my-0 text-uppercase">Ted Peters<br><h3>J</h3>
+                    <h1 class="mx-auto my-0 text-uppercase">Ted Peters<br><h3></h3>
                     <h2 class="text-white-50 mx-auto mt-2 mb-5"></h2>
                     <br>
                     <br>
-                    <a class="btn btn-primary js-scroll-trigger" href="#about">Take A Look</h8><h5><br><i class="far fa-arrow-alt-circle-down fa-3x"></i></h5></a>
+                    <a class="btn btn-primary js-scroll-trigger" href="#about">About</h8><h5><br><i class="far fa-arrow-alt-circle-down fa-3x"></i></h5></a>
                 </div>
             </div>
         </header>
@@ -50,7 +50,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
-                        <h1 class="text-white mb-4">Who I am.</h1>
+                        <h1 class="text-white mb-4">Junior Software Developer.</h1>
                         <p class="text-white-50">
                            <br><a href="https://github.com/Drop-G?tab=repositories">GitHub</a><br>
                         </p>
@@ -68,8 +68,7 @@
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4>MERX</h4>
-                            <p class="text-black-50 mb-0">As a competitive gamer I want to time myself from the start of a specific game to the end so that I will be able to compare my splits to review overall improvement. I want to see these splits displayed among other high scores from professional speed runs so that I can compare my progress to professional high scores.</p>
-                        </div>
+                            <p class="text-black-50 mb-0">As competitive gamers we wanted to make something to time ourselves from the start of a specific game to the end so that we would be will be able to compare splits to review for fun. We thought maybe other gamers would too. Collaborators:> 
                     </div>
                 </div>
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
@@ -97,21 +96,6 @@
                     </div>
                 </div>
                 <!-- Project Two Row-->
-                <div class="row justify-content-center no-gutters">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/Horiseon.png" alt="refactored html project" /></div>
-                    <div class="col-lg-6 order-lg-first">
-                        <div class="bg-black text-center h-100 project">
-                            <div class="d-flex h-100">
-                                <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Refactored</h4>
-                                    <p class="mb-0 text-white-50">The importance of semantic elements in the developement world is very cruical to minimal to no legal conflict. Just the thought of legality is unnerving. Search through this sites html and find nothing but semantic elements and clean code</p>
-                                    <hr class="d-none d-lg-block mb-0 mr-0" />
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- project three row -->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                     <div class="col-lg-6"><img class="img-fluid" src="assets/img/employee_db.png" alt="Employee Manager CLI" /></div>
                     <div class="col-lg-6">
@@ -126,7 +110,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- project four row -->
+                <!-- project three row -->
                 <div class="row justify-content-center no-gutters">
                     <div class="col-lg-6"><img class="img-fluid" src="assets/img/notetakerimg.png" alt="Note Taker Image" /></div>
                     <div class="col-lg-6 order-lg-first">
@@ -141,7 +125,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- project five row -->
+                <!-- project four row -->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                     <div class="col-lg-6"><img class="img-fluid" src="assets/img/passwordgenIMG.png" alt="password generator image" /></div>
                     <div class="col-lg-6">
@@ -149,7 +133,7 @@
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
                                     <h4 class="text-white">Password Generator</h4>
-                                    <p class="mb-0 text-white-50">Password Generator Renders a 12 digit password for you.</p>
+                                    <p class="mb-0 text-white-50"></p>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
                                 </div>
                             </div>
