--- a/index.html
+++ b/index.html
@@ -161,13 +161,13 @@
         <section class="contact-section bg-black">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 mb-3 mb-md-0">
+                    <div class="col-md-12 mb-3 mb-md-0">
                         <div class="card py-4 h-100">
                             <div class="card-body text-center">
                                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">Address</h4>
+                                <h4 class="text-uppercase m-0">Location</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50">2004 E 9th Street, Austin TX 78702</div>
+                                <div class="small text-black-50">Austin TX</div>
                             </div>
                         </div>
                     </div>
