--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </div>
         </section>
         <!-- Signup-->
-        <section class="signup-section" id="signup">
+        <!-- <section class="signup-section" id="signup">
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 col-lg-8 mx-auto text-center">
@@ -156,7 +156,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- Contact-->
         <section class="contact-section bg-black">
             <div class="container">
