--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <h2 class="text-white-50 mx-auto mt-2 mb-5"></h2>
                     <br>
                     <br>
-                    <a class="btn btn-primary js-scroll-trigger" href="#about">About</h8><h5><br><i class="far fa-arrow-alt-circle-down fa-3x"></i></h5></a>
+                    <a class="btn btn-primary js-scroll-trigger" href="#about">About</h8><h5><br><i class="far fa-arrow-alt-circle-down"></i></h5></a>
                 </div>
             </div>
         </header>
