Final Edits before starting new portfolio in react

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <h2 class="text-white-50 mx-auto mt-2 mb-5"></h2>
                     <br>
                     <br>
-                    <a class="btn btn-primary js-scroll-trigger" href="#about">About</h8><h5><br><i class="far fa-arrow-alt-circle-down"></i></h5></a>
+                    <a class="btn-sm btn-primary js-scroll-trigger" href="#about">About</h8><h5><br><i class="far fa-arrow-alt-circle-down"></i></h5></a>
                 </div>
             </div>
         </header>
@@ -52,6 +52,7 @@
                     <div class="col-lg-8 mx-auto">
                         <h1 class="text-white mb-4">Junior Software Developer.</h1>
                         <p class="text-white-50">
+                            <h2>Click Below</h2>
                            <br><a href="https://github.com/Drop-G?tab=repositories">GitHub</a><br>
                         </p>
                         <img class="img-fluid" src="assets/img/BlackSmoke1280x1275.png" alt="laptop image" />
